<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="366dp"
        android:layout_height="463dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvNombreEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TaskMaster" />

        <TextView
            android:id="@+id/tvNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_tvNombreUsuario" />

        <EditText
            android:id="@+id/etIngreseNombre"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:ems="10"
            android:hint="@string/activity_main_etIngreseNombre"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_tvPass" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:ems="10"
            android:hint="@string/activity_main_etPass"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_btnIngresar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>